Handle @Restricted methods specially.